fix: table getting overflowed and causing UI to break on Chromium browsers on small devices

--- a/src/templates/guide.module.css
+++ b/src/templates/guide.module.css
@@ -214,6 +214,12 @@
   .videoContainer {
     padding-bottom: var(--baseline-box-7x);
   }
+  .table {
+    & table {
+      table-layout: fixed;
+      text-wrap: wrap;
+    }
+  }
 }
 
 @media (--xsmall) {
@@ -222,5 +228,11 @@
   }
   .itemSpacer {
     display: none;
+  }
+  .table {
+    & table {
+      table-layout: fixed;
+      text-wrap: wrap;
+    }
   }
 }
